add button style

--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -2,6 +2,7 @@
 @import url(droparea.css);
 @import url(radio.css);
 @import url(checkbox.css);
+@import url(button.css);
 
 select {
   background: url(../../assets/icons/arrow-down-01.svg) no-repeat calc(100% - 1rem);
